--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,6 +40,10 @@
             "pattern": "react",
             "group": "external",
             "position": "before"
+          },
+          {
+            "pattern": "@/**",
+            "group": "internal"
           }
         ],
         "pathGroupsExcludedImportTypes": ["react"],
