add no console eslint rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
     "@typescript-eslint/no-floating-promises": "error",
     "react/react-in-jsx-scope": "off",
     "react/jsx-uses-react": "off",
+    "no-console": ["warn", { "allow": ["warn", "error"] }],
     "import/order": [
       "error",
       {
