--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
     "react-redux": "^9.1.2",
+    "react-spinners": "^0.14.1",
     "stripe": "^16.7.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
